# rodent

./: .env  .env.sample  .gitignore  Cargo.toml  README.md  rodent.db
sql/: schema.sql  sqlite.sql
src/: cache.rs  db.rs  errors.rs  main.rs  response.rs  routes.rs  server.rs  validates.rs
src/apis/: auth.rs  frontend.rs  index.rs  mod.rs  settings.rs  suggestion.rs  task.rs  user.rs
src/forms/: auth_form.rs  mod.rs  site_setting_form.rs  suggestion_form.rs  task_form.rs  user_form.rs
src/models/: code.rs  mod.rs  site_setting.rs  suggestion.rs  task.rs  user.rs
src/services/: mod.rs  site_setting.rs  suggestion.rs  task.rs  user.rs
src/utils/: constants.rs  crypt.rs  email.rs  mod.rs  random.rs  sms.rs  token_utils.rs
