[package]
name = "rodent"
version = "0.2.2"
authors = ["zhouyelin <zhouyelin@chelun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-redis = "0.8.1"
redis-async = "0.6.2"
actix-cors = "0.2.0"
serde = "1.0.106"
serde_json = "1.0.51"
derive_more = "0.99.5"
sqlx = { version = "0.3", features = ["mysql"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
validator = "0.10"
validator_derive = "0.10"
jsonwebtoken = "7.1.0"
rust-argon2 = "0.8.2"
rand = "0.7.3"