[package]
name = "rodent"
version = "0.2.2"
authors = ["zhouyelin <zhouyelin@chelun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["sqlite"]
mysql = []
postgres = []
sqlite = []

[dependencies]
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"
actix = "0.10.0"
actix-web = "3.0.2"
actix-rt = "1.1.1"
actix-redis = "0.9.1"
redis-async = "0.6.3"
actix-cors = "0.3.0"
serde = "1.0.116"
serde_json = "1.0.57"
derive_more = "0.99.10"
sqlx = { version = "0.3", default-features = false, features = ["mysql", "sqlite","postgres", "runtime-tokio", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
validator = "0.10"
validator_derive = "0.10"
jsonwebtoken = "7.2.0"
rust-argon2 = "0.8.2"
rand = "0.7.3"
lettre = "0.9"
lettre_email = "0.9"
native-tls = "0.2"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rust-crypto = "0.2"
percent-encoding = "2.1"
sonic_client = "0.1"